<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.klarna</groupId>
    <artifactId>hiverunner</artifactId>
    <version>2.5.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:${git.repo}</connection>
        <developerConnection>scm:git:${git.repo}</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tez.version>0.7.0</tez.version>
        <hive.version>0.14.0</hive.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-serde</artifactId>
            <version>${hive.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-jdbc</artifactId>
            <version>${hive.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.apache.hive.hcatalog</groupId>
            <artifactId>hive-webhcat-java-client</artifactId>
            <version>${hive.version}</version>
        </dependency>


        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-service</artifactId>
            <version>${hive.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>derby</artifactId>
                    <groupId>org.apache.derby</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>datanucleus-api-jdo</artifactId>
                    <groupId>org.datanucleus</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>datanucleus-core</artifactId>
                    <groupId>org.datanucleus</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>datanucleus-rdbms</artifactId>
                    <groupId>org.datanucleus</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>bonecp</artifactId>
                    <groupId>com.jolbox</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>calcite-core</artifactId>
                    <groupId>org.apache.calcite</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>calcite-avatica</artifactId>
                    <groupId>org.apache.calcite</groupId>
                </exclusion>
            </exclusions>
        </dependency>


        <!-- The latest versions of datanucleus seams to be faster than the one included in hive -->
        <dependency>
            <artifactId>datanucleus-api-jdo</artifactId>
            <groupId>org.datanucleus</groupId>
            <version>3.2.8</version>
        </dependency>


        <dependency>
            <artifactId>tez-dag</artifactId>
            <groupId>org.apache.tez</groupId>
            <version>${tez.version}</version>
        </dependency>

        <dependency>
            <artifactId>tez-common</artifactId>
            <groupId>org.apache.tez</groupId>
            <version>${tez.version}</version>
        </dependency>

        <dependency>
            <artifactId>tez-mapreduce</artifactId>
            <groupId>org.apache.tez</groupId>
            <version>${tez.version}</version>
        </dependency>

        <dependency>
            <artifactId>datanucleus-core</artifactId>
            <groupId>org.datanucleus</groupId>
            <version>3.2.12</version>
        </dependency>

        <dependency>
            <artifactId>datanucleus-rdbms</artifactId>
            <groupId>org.datanucleus</groupId>
            <version>3.2.11</version>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.9.5</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-contrib</artifactId>
            <version>${hive.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.8</version>
        </dependency>

        <!-- Always put this before JUnit or the class loader might load the wrong Matcher -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- forkMode:always resolves OOM error when running unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <!-- Hiverunner need this for some queries-->
                    <forkCount>1C</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
                    <systemProperties>
                        <!--
                        Any hive conf property may be overridden here by suffixing it with 'hiveconf_'
                        -->
                        <hiveconf_hive.execution.engine>mr</hiveconf_hive.execution.engine>
                        <hiveconf_hive.exec.counters.pull.interval>1000</hiveconf_hive.exec.counters.pull.interval>
                        <enableTimeout>false</enableTimeout>
                        <timeoutSeconds>30</timeoutSeconds>
                        <timeoutRetries>2</timeoutRetries>
                    </systemProperties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
